--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <video class="hero-video" autoplay muted loop playsinline>
-            <source src="https://assets.mixkit.co/videos/preview/mixkit-airplane-flying-in-a-cloudy-sky-2715-large.mp4" type="video/mp4">
+            <source src="https://www.pexels.com/download/video/5197667/" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
         
